--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "slant"
-version = "0.1.1"
+version = "0.1.2"
 description = "Identify and quantify bias in Python"
 authors = ["William W. Marx <null@marx.design>"]
 license = "CC0 1.0 Universal"
@@ -12,6 +12,9 @@ multiprocess = "^0.70.12"
 
 [tool.poetry.dev-dependencies]
 yapf = "^0.31.0"
+pytest = "^6.2.5"
+pylint = "^2.10.2"
+vaderSentiment = "^3.3.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
